# ChangeLog for dev-ruby/ruby-gtk2
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk2/ChangeLog,v 1.59 2008/04/12 08:48:56 graaff Exp $

  09 Jan 2009; Mark Somerville <gentoo-ruby@scottishclimbs.com>
  +ruby-gtk2-0.18.1-r1.ebuild:
  Removed rubyee.

  18 Dec 2008; gentoo-ruby@scottishclimbs.com +metadata.xml,
  +ruby-gtk2-0.18.1.ebuild:
  Added ebuild for 0.18.1.

*ruby-gtk2-0.16.0-r3 (12 Apr 2008)

  12 Apr 2008; Hans de Graaff <graaff@gentoo.org>
  +files/ruby-gtk2-0.16.0-iconview-get-path.patch,
  +ruby-gtk2-0.16.0-r3.ebuild:
  Fix crash on amd64 related to iconview; thanks for John Keeping in bug 215634
  for providing the patch."

  28 Mar 2008; Hans de Graaff <graaff@gentoo.org> -ruby-gtk2-0.14.1.ebuild,
  -ruby-gtk2-0.15.0.ebuild, -ruby-gtk2-0.16.0.ebuild,
  -ruby-gtk2-0.16.0-r1.ebuild:
  Remove old versions

  04 Dec 2007; Raúl Porcel <armin76@gentoo.org> ruby-gtk2-0.16.0-r2.ebuild:
  alpha/ia64/sparc stable wrt security #200623

  02 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  ruby-gtk2-0.16.0-r2.ebuild:
  ppc stable, bug #200623

  30 Nov 2007; Steve Dibb <beandog@gentoo.org> ruby-gtk2-0.16.0-r2.ebuild:
  amd64 stable, bug 200623

  29 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-gtk2-0.16.0-r2.ebuild:
  stable x86, security bug 200623

*ruby-gtk2-0.16.0-r2 (28 Nov 2007)

  28 Nov 2007; Hans de Graaff <graaff@gentoo.org>
  +files/ruby-gtk2-0.16.0-format-string.patch, +ruby-gtk2-0.16.0-r2.ebuild:
  Fix format string problem reported in bug #200623, thanks to Lars Hartmann.

  17 Nov 2007; nixnut <nixnut@gentoo.org> ruby-gtk2-0.16.0-r1.ebuild:
  Stable on ppc wrt bug 198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> ruby-gtk2-0.16.0-r1.ebuild:
  alpha/ia64/sparc stable wrt #198845

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-gtk2-0.16.0-r1.ebuild:
  stable x86, bug 198845
